2001-04-20  Eric Blake  <ebb9@email.byu.edu>

	* src/long.h: fix another HP-UX aCC enum

2001-04-19  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (IEEEfloat, Adjust):
	* src/double.h (IEEEfloat, Adjust):
	Add IEEEfloat::Adjust(), which simply segregates
	a portion of IEEEfloat(char *) from being inline,
	where it caused an ICE in mingw 2.95.2 (bug 433).
	(IEEEfloat, IEEEdouble):
	Fix friend declarations to include the keyword
	class, to support the HP-UX aCC compiler. Fix
	enums, along with...
	* src/semantic.h (Semantic):
	Fixed enum to not end in trailing comma (it's
	valid in C99, but not C++98); not all compilers
        support this extension to the language yet.
	* src/platform.cpp (Format):
	Move declaration of int i out of for loop inside
	switch statement, since some compilers (aCC, VC++)
        are broken and don't do scoping correctly.

2001-04-16  Eric Blake  <ebb9@email.byu.edu>

	* doc/jikes.1: Include mention of other
	copyright code sources in jikes, including
	David M. Gay's dtoa.c that inspired much
	of this patch.
	* src/Makefile.am:
	* src/Makefile.in: Add dependency of
	double.h on long.h.
	* src/double.h:
	* src/double.cpp:
	Add better const support to existing
	methods.
	(IEEEfloat, IEEEdouble):
	Change IEEEfloat(char *) and
	IEEEdouble(char *) to be 100% accurate.
	Fix a bug in conversion from negative
	longs to floating point.
	Clean up magic numbers, and got enum
	constants working cleanly.
	Add methods Bias() and FractSize().
	(BigInt): Add the BigInt class for use
	in string/floating-point conversions.
	* src/expr.cpp (CastPrimitiveValue):
	Clean up the casts to work with more
	compilers.
	* src/semantic.h:
	* src/expr.cpp:
	(Process*_SHIFT):
	Get rid of magic numbers with shifts.
	* src/long.h:
	* src/long.cpp:
	Add better const support to existing
	methods.
	Remove some magic numbers.
	* src/platform.h:
	* src/platform.cpp (FloatToString)
	(DoubleToString): Rewrite the conversions
	from floating point to strings to be